Admin get all team building event
