# src/main/resources/swagger.json
@@ -804,6 +804,369 @@
       }
     },
 
+    "/api/events/team-building":{
+      "get": {
+        "tags": [
+          "event-controller"
+        ],
+        "summary": "getTeamBuildingEvents",
+        "operationId": "getTeamBuildingEventsUsingGET",
+        "produces": [
+          "*/*"
+        ],
+        "responses": {
+          "200": {
+            "description": "status_code : 200. Meaning: Thành công \n status_code : 930. Message: Error IOException. Meaning: Lỗi IOException",
+            "schema": {
+              "type": "object",
+              "required": [
+                "status_code"
+              ],
+              "properties": {
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "number"
+                      },
+                      "name": {
+                        "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "number"
+                      },
+                      "address": {
+                        "type": "string"
+                      },
+                      "createdDate": {
+                        "type": "string"
+                      },
+                      "updatedDate": {
+                        "type": "string"
+                      },
+                      "beginDate": {
+                        "type": "string"
+                      },
+                      "endDate": {
+                        "type": "string"
+                      },
+                      "group": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "number"
+                          },
+                          "name": {
+                            "type": "string"
+                          },
+                          "description": {
+                            "type": "string"
+                          },
+                          "groupType": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "number"
+                              },
+                              "name": {
+                                "type": "string"
+                              }
+                            }
+                          },
+                          "createdDate": {
+                            "type": "string"
+                          }
+                        }
+                      },
+                      "eventUserList": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "user": {
+                              "type": "object",
+                              "properties": {
+                                "user": {
+                                  "type": "object",
+                                  "properties": {
+                                    "username": {
+                                      "type": "string"
+                                    },
+                                    "lastName": {
+                                      "type": "string"
+                                    },
+                                    "firstName": {
+                                      "type": "string"
+                                    },
+                                    "fullName": {
+                                      "type": "string"
+                                    },
+                                    "email": {
+                                      "type": "string"
+                                    },
+                                    "userRole": {
+                                      "type": "string"
+                                    },
+                                    "birthday": {
+                                      "type": "string"
+                                    },
+                                    "numberPhone": {
+                                      "type": "string"
+                                    },
+                                    "address": {
+                                      "type": "string"
+                                    },
+                                    "gmail": {
+                                      "type": "string"
+                                    },
+                                    "skype": {
+                                      "type": "string"
+                                    },
+                                    "dateStartWork": {
+                                      "type": "string"
+                                    }
+                                  }
+                                },
+                                "event": {
+                                  "type": "object"
+                                },
+                                "type": {
+                                  "type": "number"
+                                }
+                              }
+                            },
+                            "event": {
+                              "type": "object"
+                            },
+                            "type": {
+                              "type": "number"
+                            }
+                          }
+                        }
+                      }
+                    },
+                    "example": {
+                      "data": [
+                        {
+                          "id": 34,
+                          "name": "Nghi mat",
+                          "description": "Nghi mat tai FLC",
+                          "status": null,
+                          "address": "FLC Thanh Hoa",
+                          "createdDate": "18-09-2018 10:00",
+                          "updatedDate": null,
+                          "beginDate": null,
+                          "endDate": null,
+                          "group": {
+                            "id": 3,
+                            "name": "Team building",
+                            "description": null,
+                            "groupType": {
+                              "id": 3,
+                              "name": "Team building"
+                            },
+                            "createdDate": "18-09-2018 09:55",
+                            "additionalConfig": {
+                              "firstPrizePoint": "8",
+                              "secondPrizePoint": "5",
+                              "thirdPrizePoint": "3",
+                              "organizerPoint": "10"
+                            }
+                          },
+                          "eventUserList": [
+                            {
+                              "user": {
+                                "username": "kpi.employee",
+                                "lastName": "kpi",
+                                "firstName": "employee",
+                                "fullName": null,
+                                "email": "kpi.employee@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 4
+                            },
+                            {
+                              "user": {
+                                "username": "kpi.test",
+                                "lastName": "kpi",
+                                "firstName": "test",
+                                "fullName": null,
+                                "email": "kpi.test@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 5
+                            },
+                            {
+                              "user": {
+                                "username": "kpi.test01",
+                                "lastName": "kpi",
+                                "firstName": "test",
+                                "fullName": null,
+                                "email": "kpi.test@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 6
+                            },
+                            {
+                              "user": {
+                                "username": "kpi.test05",
+                                "lastName": "kpi",
+                                "firstName": "test",
+                                "fullName": null,
+                                "email": "kpi.test@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 7
+                            }
+                          ]
+                        },
+                        {
+                          "id": 48,
+                          "name": "Sinh nhat",
+                          "description": "Sinh nhat cong ty 3 nam",
+                          "status": null,
+                          "address": "72 Tran Dang Ninh",
+                          "createdDate": "18-09-2018 10:00",
+                          "updatedDate": null,
+                          "beginDate": null,
+                          "endDate": null,
+                          "group": {
+                            "id": 3,
+                            "name": "Team building",
+                            "description": null,
+                            "groupType": {
+                              "id": 3,
+                              "name": "Team building"
+                            },
+                            "createdDate": "18-09-2018 09:55",
+                            "additionalConfig": {
+                              "firstPrizePoint": "8",
+                              "secondPrizePoint": "5",
+                              "thirdPrizePoint": "3",
+                              "organizerPoint": "10"
+                            }
+                          },
+                          "eventUserList": [
+                            {
+                              "user": {
+                                "username": "kpi.employee",
+                                "lastName": "kpi",
+                                "firstName": "employee",
+                                "fullName": null,
+                                "email": "kpi.employee@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 4
+                            },
+                            {
+                              "user": {
+                                "username": "kpi.test",
+                                "lastName": "kpi",
+                                "firstName": "test",
+                                "fullName": null,
+                                "email": "kpi.test@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 5
+                            },
+                            {
+                              "user": {
+                                "username": "kpi.test01",
+                                "lastName": "kpi",
+                                "firstName": "test",
+                                "fullName": null,
+                                "email": "kpi.test@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 6
+                            },
+                            {
+                              "user": {
+                                "username": "kpi.test05",
+                                "lastName": "kpi",
+                                "firstName": "test",
+                                "fullName": null,
+                                "email": "kpi.test@higgsup.com",
+                                "userRole": null,
+                                "birthday": null,
+                                "numberPhone": null,
+                                "address": null,
+                                "gmail": null,
+                                "skype": null,
+                                "dateStartWork": null
+                              },
+                              "type": 7
+                            }
+                          ]
+                        }
+                      ],
+                      "status_code": 200
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+
     "/api/events/support": {
       "post": {
         "tags": [
